# execution_collator

./: CMakeLists.txt  execution_collator.h
demo/: CMakeLists.txt  main.cpp
include/: execution_collator.h
